-
Bug
-
Resolution: Fixed
-
P2
-
8u60
-
Windows 7 and 8
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8098560 | 9 | Kirill Kirichenko | P2 | Resolved | Fixed |
This may be related to RT-46138. To reproduce, do the following on Windows:
1. Run Ensemble8
2. Choose the AdvancedMedia sample
3. Once the video starts playing press the pause button
4. Move the time slider to the middle
5. Press play. It won't (seeRT-46138)
6. Press the back button
7. Press the forward button to go back to the sample.
8. Usually it will not start playing -- the media is stuck
9. Click the window close button
BUG: the application will hang
The thread stack dump is attached.
1. Run Ensemble8
2. Choose the AdvancedMedia sample
3. Once the video starts playing press the pause button
4. Move the time slider to the middle
5. Press play. It won't (see
6. Press the back button
7. Press the forward button to go back to the sample.
8. Usually it will not start playing -- the media is stuck
9. Click the window close button
BUG: the application will hang
The thread stack dump is attached.
- backported by
-
JDK-8098560 FX application hangs on exit when media gets stuck
-
- Resolved
-
- relates to
-
JDK-8130219 Seek fails for media streams after several tries
-
- Resolved
-
-
JDK-8088823 Advanced Media Player tab does not respond to "Time" slider on Windows
-
- Resolved
-