8090033:  FX application hangs on exit when media gets stuck

Reviewed-by: kcr, almatvee